# Formal2021Practice

./: CDFA.cpp  CDFA.hpp  CYK.cpp  CYK.hpp  Grammar.cpp  Grammar.hpp  LR0.cpp  LR0.hpp  MinDFA.cpp  MinDFA.hpp  Parser.hpp  README.md  main.cpp
.github/workflows/: Test.yml
headers/: Grammar.hpp  LR0.hpp  Parser.hpp
src/: Grammar.cpp  LR0.cpp  Parser.cpp
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  RecognizeTestCase.cpp  RecognizeTestCase.hpp
